# Tecbains-python-api

./: .env  pyproject.toml  sql_app.db  tecblog.db
tecbains/: api.py  get_db.py  main.py
tecbains/auth/: auth_bearer.py
tecbains/db/sqlite/: crud.py  models.py
tecbains/db/sqlite/schemas/: post_schema.py  user_schema.py
tecbains/dependencies/: database.py
tecbains/dependencies/authentication/: jwt_methods.py  user_methods.py
tecbains/dependencies/models/: __init__.py  base_model.py  post.py  user.py
tecbains/dependencies/schemas/: __init__.py  post.py  sign_up.py  user.py
tecbains/middleware/: get_user_by_token.py
tecbains/router/: post_router.py  user_router.py
tecbains/routes/: auth.py  sign_up.py
tecbains/use_cases/: post_use_case.py  user_use_case.py
tecbains/utils/: util.py
tests/: test_tecbains.py
