[tool.poetry]
name = "Tecbains"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.0"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.17"
bcrypt = "^4.0.1"
PyJWT = "^2.7.0"
python-dotenv = "^1.0.0"
pydantic = {version = "1.8.2", extras = ["email"]}

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
