[tool.poetry]
name = "Tecbains"
version = "0.1.0"
description = ""
authors = ["ItaloCobains <italobrandao.contato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.0.1"
fastapi = "^0.99.1"
passlib = "^1.7.4"
pyhumps = "^3.8.0"
python-decouple = "^3.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
SQLAlchemy = "^2.0.17"
typer = {extras = ["all"], version = "^0.9.0"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
